dataset1235/2025-2/2947369575/users/451402951/executions/1003782500_2819779400.log
== SUBMISSION (2025-09-01 21:09:03)
-- CODE: 
x = float(input())

y = float(input())

z = float(input())

calculo1 = x * y + z

print(round(calculo,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(calculo,1))
                ^^^^^^^
NameError: name 'calculo' is not defined. Did you mean: 'calculo1'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(calculo,1))
                ^^^^^^^
NameError: name 'calculo' is not defined. Did you mean: 'calculo1'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(calculo,1))
                ^^^^^^^
NameError: name 'calculo' is not defined. Did you mean: 'calculo1'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(calculo,1))
                ^^^^^^^
NameError: name 'calculo' is not defined. Did you mean: 'calculo1'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(calculo,1))
                ^^^^^^^
NameError: name 'calculo' is not defined. Did you mean: 'calculo1'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(calculo,1))
                ^^^^^^^
NameError: name 'calculo' is not defined. Did you mean: 'calculo1'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 21:09:25)
-- CODE: 
x = float(input())

y = float(input())

z = float(input())

calculo1 = x * y + z

print(round(calculo1,1))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
1642.5
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
540.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
162.6
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
